homeassistant/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: homeassistant-service-endpoints
  namespace: homeassistant
  labels:
    kubernetes.io/service-name: homeassistant-service
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8123
endpoints:
  - addresses:
      - "10.10.0.2"
