homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-service
  namespace: homeassistant
spec:
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123
  type: ClusterIP
