homeassistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  namespace: homeassistant
  annotations:
    nginx.ingress.kubernetes.io/compute-full-forwarded-for: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: homeassistant.becutewith.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant-service
                port:
                  number: 8123
